# universe

./: .gitignore  Cargo.toml  flake.nix  taplo.toml
crates/dynamics/: Cargo.toml
crates/dynamics/src/: lib.rs  plugins.rs  systems.rs
crates/dynamics/src/components/: acceleration.rs  debug.rs  mod.rs  velocity.rs
crates/hud/: Cargo.toml
crates/hud/src/: components.rs  lib.rs  plugins.rs  systems.rs
crates/mechanics/: Cargo.toml
crates/mechanics/src/: element.rs  lib.rs  plugins.rs  systems.rs
crates/mechanics/src/components/: atom.rs  electron.rs  mod.rs  neutron.rs  particle.rs  proton.rs
crates/universe/: Cargo.toml
crates/universe/src/: main.rs
crates/view/: Cargo.toml
crates/view/src/: components.rs  plugins.rs  systems.rs
