[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/jens-hj/universe"
authors = [
    "Avianastra <avianastra@gmail.com>",
]
rust-version = "1.84"

[workspace]
resolver = "2"
members = [
    "crates/universe",
    "crates/mechanics",
    "crates/view",
    "crates/dynamics",
    "crates/hud",
]

[workspace.dependencies]
# Internal Crates
universe.path  = "crates/universe"
mechanics.path = "crates/mechanics"
view.path      = "crates/view"
dynamics.path  = "crates/dynamics"
hud.path      = "crates/hud"

# Third Party Crates
bevy = { version = "0.15", default-features = true, features = [
    "wayland",
] }
bevy_blendy_cameras = "0.6"
rand = "0.8"
strum = "0.26"
strum_macros = "0.26"

# From GitHub
iyes_perf_ui = { git = "https://github.com/IyesGames/iyes_perf_ui.git", branch = "main" }

[workspace.lints.rust]
unsafe_code                   = "forbid"
missing_debug_implementations = "allow"
missing_docs                  = "allow"

[workspace.lints.clippy]
undocumented_unsafe_blocks       = "warn"
enum_glob_use                    = "warn"
cast_possible_truncation         = "warn"
tests_outside_test_module        = "warn"
assertions_on_result_states      = "warn"
pedantic                         = "warn"
nursery                          = "warn"
unwrap_used                      = "deny"
inline_always                    = "allow"
default_constructed_unit_structs = "allow" # nice for adding plugins, that may later have config values
needless_pass_by_value           = "allow" # bevy uses a lot of pass by value wrapper types like `Query`, `Res` etc.
module_name_repetitions          = "allow"
must_use_candidate               = "allow"
