[package]
name                   = "dynamics"
version                = "0.1.0"
edition.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true

[dependencies]
# Internal
# mechanics.workspace = true

# Third party
bevy.workspace = true

[lints]
workspace = true
