[package]
name                   = "hud"
version.workspace      = true
edition.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true

[dependencies]
# Internal Crates
mechanics.workspace = true

# Third Party Crate
bevy.workspace         = true
iyes_perf_ui.workspace = true

[lints]
workspace = true
