[package]
name                   = "mechanics"
version                = "0.1.0"
edition.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true

[dependencies]
bevy.workspace         = true
strum.workspace        = true
strum_macros.workspace = true

[lints]
workspace = true
