[package]
name                   = "mechanics"
version                = "0.1.0"
edition.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true

[dependencies]
# Internal Crates
dynamics.workspace = true

# Third Party Crates
bevy.workspace         = true
strum.workspace        = true
strum_macros.workspace = true

[lints]
workspace = true
