[package]
name                   = "view"
version                = "0.1.0"
edition.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true

[dependencies]
# Internal crates
mechanics.workspace     = true
bevy_dynamics.workspace = true

# Third party crates
bevy.workspace                = true
bevy_blendy_cameras.workspace = true
rand.workspace                = true
strum.workspace               = true
strum_macros.workspace        = true

[lints]
workspace = true
